[gd_scene load_steps=4 format=2]

[ext_resource path="res://gunStorePopup.gd" type="Script" id=1]
[ext_resource path="res://gunList.gd" type="Script" id=2]
[ext_resource path="res://chooseBuySellPopup.tscn" type="PackedScene" id=3]

[node name="gunStorePopup" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 424.0
margin_top = 256.0
margin_right = 599.0
margin_bottom = 344.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 81.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 161.0
margin_bottom = 14.0
text = "-- Dan's House of Guns --"
align = 1

[node name="gunList" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 161.0
margin_bottom = 34.0
script = ExtResource( 2 )

[node name="leaveButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 161.0
margin_bottom = 74.0
text = "Leave"

[node name="chooseBuySellPopup" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 293.0
margin_right = 519.0
margin_bottom = 307.0
[connection signal="itemButtonPressed" from="PanelContainer/VBoxContainer/gunList" to="." method="_on_gunList_itemButtonPressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/leaveButton" to="." method="_on_leaveButton_pressed"]
[connection signal="buyPressed" from="chooseBuySellPopup" to="." method="_on_chooseBuySellPopup_buyPressed"]
[connection signal="cancelPressed" from="chooseBuySellPopup" to="." method="_on_chooseBuySellPopup_cancelPressed"]
[connection signal="sellPressed" from="chooseBuySellPopup" to="." method="_on_chooseBuySellPopup_sellPressed"]
